Fixed bug #73837 ("new DateTime()" sometimes returns 1 second ago value).